--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"></a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"></a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"></a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"></a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td width="742"><h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/7/n13145630.md#1" target="_blank">10个月瘦25公斤 医师这样调出不易胖体质</a><br></h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/7/n13145630.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13150438-shutterstock_68305150-320x200.jpg" align ="left"></a>日本减肥名医工藤孝文医师曾因工作忙碌，无法好好用餐和运动，体重增加到92 公斤。后来，擅用自己的中医专长，仅10个月左右就降至67公斤。他指出，“一日三餐均衡饮食、适度运动”对他是困难的事，因此一直在寻找适合自己的减肥方式。有3种因素会造成肥胖体质，中药对症调理有助减肥，变成难以增重的体质。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 6:19 AM	</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13160389.md#1" target="_blank">三个简单的夏季水果甜点食谱</a><br></h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13160389.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13160402-Berries-1-700x420-320x200.jpg" align ="left"></a>混合浆果馅饼配冰掼奶油是我最喜欢的夏季甜点。几十年来，我一直在做这种果味浓郁、顶部蓬松、不太甜的甜点。有时我把配方翻倍，所有的甜点就会被一扫而光。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 2:35 AM	</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161222.md#1" target="_blank">车评：重新出发 2022 Mitsubishi Outlander SEL</a><br></h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161222.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13161227-2022_Mitsubishi_Outlander_01-150x120.jpg" align ="left"></a>Mitsubishi?推出全新设计的2022年款Outlander，属第四代产品，拥有多年制造SUV的Mitsubishi，新一代Outlander的实力令人期待。笔者尤其喜欢Mitsubishi这品牌，这也是多年前驾驶Pajero及Space Wagon时留下的美好印象。
 
 
@@ -9,7 +9,6 @@
 8)?等待工厂保修到期
 新车都带有“工厂保.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 5:25 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161024.md#1" target="_blank">臂丛神经痛（Brachial Neuralgia）问与答</a><br></h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161024.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/Fotolia_42304841_Subscription_L-150x120.jpg" align ="left"></a>臂丛神经痛（Brachial Neuralgia）问与答......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 3:00 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13160389.md#1" target="_blank">三个简单的夏季水果甜点食谱</a><br></h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13160389.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13160402-Berries-1-700x420-150x120.jpg" align ="left"></a>混合浆果馅饼配冰掼奶油是我最喜欢的夏季甜点。几十年来，我一直在做这种果味浓郁、顶部蓬松、不太甜的甜点。有时我把配方翻倍，所有的甜点就会被一扫而光。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 2:35 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159997.md#1" target="_blank">长相相似的两匹马和一只狗 成好朋友</a><br></h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159997.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13160676-shutterstock_186085565-150x120.jpg" align ="left"></a>荷兰一位驯马师非常喜欢带斑点的动物，她将自己的职业和爱好完美结合，在她的草场上有三只不同种类的动物，但它们却有着相同的斑点“外套”，一起出现时非常引人注目！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 1:45 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13160287.md#1" target="_blank">30分钟清理车库 扔掉十种废旧物品</a><br></h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13160287.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13160365-shutterstock_245215153-150x120.jpg" align ="left"></a>如果你的车库堆着很多准备扔但没扔，或不再适合家里用的东西，那你的车库就变成废旧物品库了。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 12:44 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13160360.md#1" target="_blank">【重播】Delta传多地 中国防疫方式有效吗？</a><br></h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13160360.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13160544-8.13.21-web-Health-Live-150x120.jpg" align ="left"></a>Delta变种多地迅速传播！什么才是最佳防疫模式？
@@ -44,6 +43,7 @@ Delta变种占全球82%！全球疫情将面临什么挑战？......<br><img ali
 <tr><td width="742"><h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/8/n13147593.md#1" target="_blank">调整做菜的节奏 下班回家快速上菜的诀窍</a><br></h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/8/n13147593.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/07/Fotolia_46791401_Subscription_L-150x120.jpg" align ="left"></a>你是否有一种情况，下班后已经很累了，全家人却饥肠辘辘等你煮好菜饭上桌。是的！可以“叫外送”餐点，但是新冠肺炎疫情仍旧延烧，叫外卖难免会有卫生安全的疑虑，再加上外食吃久也会腻味。要怎么样让自己下厨备料不会手忙脚乱，而且快速上桌也不消耗体力，重点是食物又好吃！让我们看看料理研究家“有元叶子”怎么建议。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月11日 5:00 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/11/n13154382.md#1" target="_blank">小熊逛美国加州超市 民众看傻眼</a><br></h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/11/n13154382.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13154403-black-bear-50293_1280-150x120.jpg" align ="left"></a>一只年轻的野生熊日前闯入美国加州洛杉矶的一家超市，而且在附近街道闲逛，令当地民众大感惊讶。在有关单位的出面之下，这只小熊已经被送往安全的栖息地。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月11日 3:02 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/11/n13154125.md#1" target="_blank">东奥“奖牌人口比”曝光 台湾大胜中国8倍</a><br></h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/11/n13154125.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13154129-GettyImages-1234348274-150x120.jpg" align ="left"></a>在本届东京奥运会上，台湾总共赢得12面奖牌，创下空前纪录。虽然台湾在奖牌榜上名列全球第34（计算奖牌数则是排名第22），但若以奖牌数与人口数的比例来看，台湾的排名则会大幅超前，不但领先日本、韩国等邻国，而且大胜中国8倍。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月11日 1:23 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/7/n13145279.md#1" target="_blank">减肥也可以吃甜点 自制低卡闪电泡芙</a><br></h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/7/n13145279.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13145443-da034149513ddbdc342ebe79395261cb-150x120.jpg" align ="left"></a>减肥时可以吃甜点吗？很多人在减重时会远离泡芙酥皮，深怕卡路里值会超标，然而，只要使用低脂抹酱和甜味剂就可以大幅降低卡路里值！再加上一点点巧克力和鲜奶油，这道闪电泡芙就是终极的甜点了!......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月11日 10:00 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13161199.md#1" target="_blank">汽车维修问与答 &#8211; 机油问题</a><br></h3>读者忠和问：李先生您好，请教几个机油问题：
 1) Toyota?Altis?2013年，原厂手册建议机油用5W30，但最近保养厂却换5w50。是否可以？请给个建议。现我有闲置4瓶10w40，可以拿来用吗？
 2) Toyota RAV4 Adventure 2000cc 2021年，原厂手册建议机油用0w20，但机油.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 5:34 AM			</td></tr>
